--- a/index.html
+++ b/index.html
@@ -16,27 +16,72 @@
       height: auto;
       margin-top: 20px;
     }
+    /* フォームのスタイル調整 */
+    #textInput {
+      width: 30%; /* テキスト入力フォームの幅を30%に設定 */
+      margin-bottom: 10px; /* 下部に余白を追加 */
+    }
+    #pageInput {
+      width: 70px; /* ページ数入力フォームの幅を70pxに設定 */
+      margin-bottom: 10px; /* 下部に余白を追加 */
+    }
+    /* 使用方法のスタイル調整 */
+    #usageBox {
+      border: 2px solid #ddd; /* ボーダーのスタイル */
+      background-color: #f9f9f9; /* 背景色 */
+      padding: 15px; /* 内側の余白 */
+      border-radius: 10px; /* 角丸 */
+      margin-top: 10px; /* 修正：上部に余白を追加 */
+      text-align: left; /* テキストを左寄せに設定 */
+    }
+    ol {
+      margin: 0; /* マージンをリセット */
+      padding-left: 20px; /* 左側の余白 */
+    }
   </style>
 </head>
 <body>
 
   <h1>画像表示ページ</h1>
 
-  <label for="textInput">テキスト入力:</label>
-  <input type="text" id="textInput" placeholder="文字列を入力">
+  <div id="usageBox">
+    <p><strong>使用方法:</strong></p>
+    <ol>
+      <li>対象画像サイトの1ページ目の画像を右クリックし、「検証」を押下します。</li>
+      <li>画像URLをコピーし、下の「画像URL入力フォーム」にペーストします。</li>
+      <li>対象画像サイトの最大ページ数を下の「指定ページ数」に入力します。</li>
+      <li>「画像表示」ボタンを押下します。</li>
+      <li>すべての画像が表示されたら、何もないところで右クリックし「名前を付けて保存」を選択します。</li>
+      <li>ダウンロードの「画像表示ページ_files」フォルダに画像が保存されるので、中身を切り取りして別フォルダへペーストします。</li>
+    </ol>
+  </div>
+
+  <label for="textInput">画像URL入力フォーム:</label>
+  <input type="text" id="textInput" placeholder="画像URLを入力">
 
   <label for="pageInput">指定ページ数:</label>
-  <input type="number" id="pageInput" placeholder="ページ数">
+  <input type="number" id="pageInput" placeholder="ページ数" max="999">
 
   <button onclick="displayImages()">画像表示</button>
-  <button onclick="downloadImgs()">一括で保存</button>
 
   <div id="imageContainer"></div>
+  <div id="errorContainer"></div>
 
   <script>
     function displayImages() {
       // テキスト入力値の取得
       var inputText = document.getElementById("textInput").value;
+
+      // 末尾が "1.jpg" でない場合
+      if (!inputText.endsWith("1.jpg")) {
+        document.getElementById("errorContainer").innerHTML = "画像URLを入力してください。";
+        return;
+      } else {
+        document.getElementById("errorContainer").innerHTML = "";
+      }
+
+      // 末尾の「1.jpg」を取り除く
+      var baseInputText = inputText.slice(0, -5);
 
       // 指定ページ数の取得
       var pageCount = parseInt(document.getElementById("pageInput").value);
@@ -49,52 +94,10 @@
 
       // 1.jpg から指定ページ数までの画像を表示
       for (var i = 1; i <= pageCount; i++) {
-        var imageUrl = inputText + i + ".jpg";
+        var imageUrl = baseInputText + i + ".jpg";
         var imgElement = document.createElement("img");
         imgElement.src = imageUrl;
         imageContainer.appendChild(imgElement);
-      }
-    }
-
-    function downloadImgs() {
-      // テキスト入力値の取得
-      var inputText = document.getElementById("textInput").value;
-
-      // 指定ページ数の取得
-      var pageCount = parseInt(document.getElementById("pageInput").value);
-
-      // 1.jpg から指定ページ数までの画像を一括ダウンロード
-      for (var i = 1; i <= pageCount; i++) {
-        // ファイル名に含まれる '/' を '_' に変換
-        var fileName = (inputText + i + ".jpg").replace(/\//g, '_');
-        downloadImg(fileName);
-      }
-    }
-
-    function downloadImg(fileName) {
-      // ファイル情報
-      const url = './imgs/' + fileName;
-
-      // IE用
-      if (window.navigator.msSaveOrOpenBlob) {
-        let xhr = new XMLHttpRequest();
-        xhr.open('GET', url);
-        xhr.responseType = 'blob';
-        xhr.onload = function () {
-          if (xhr.status !== 200) {
-            return false;
-          }
-          window.navigator.msSaveOrOpenBlob(xhr.response, fileName);
-        }
-        xhr.send();
-      } else { // Chromeなど
-        let link = document.createElement('a');
-        link.href = url;
-        link.download = fileName;
-
-        document.body.appendChild(link);
-        link.click();
-        document.body.removeChild(link);
       }
     }
   </script>
