--- a/index.html
+++ b/index.html
@@ -51,6 +51,21 @@
       margin: 0; /* マージンをリセット */
       padding-left: 20px; /* 左側の余白 */
     }
+    #reloadButton {
+      position: fixed;
+      right: 10px;
+      bottom: 10px;
+      width: 120px; /* 修正：ボタンの幅を指定 */
+      height: 40px; /* 修正：ボタンの高さを指定 */
+      line-height: 40px; /* 修正：テキストの垂直中央揃え */
+      background-color: #494949;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      /* 修正：透過度を設定 */
+      background-color: rgba(85, 85, 85, 0.719)
+    }
   </style>
 </head>
 <body>
@@ -79,6 +94,8 @@
 
   <div id="imageContainer"></div>
   <div id="errorContainer"></div>
+
+  <button id="reloadButton" onclick="displayImages()">再読み込み</button>
 
   <script>
     function displayImages() {
