--- a/index.html
+++ b/index.html
@@ -1,184 +1,135 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>画像表示ページ</title>
-  <style>
-    /* スタイルの追加（任意） */
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      margin: 50px;
-    }
-    .imageContainer {
-      position: relative;
-      margin-top: 20px;
-      display: inline-block; /* 画像が左に並ぶようにするために追加 */
-    }
-    img {
-      max-width: 100%;
-      height: auto;
-    }
-    .imageNumber {
-      position: absolute;
-      top: 0;
-      left: 0;
-      background-color: rgba(255, 255, 255, 0.7);
-      padding: 5px;
-      border-radius: 5px;
-      font-size: 2.5em; /* 修正：文字サイズを2.5倍に設定 */
-    }
-    /* フォームのスタイル調整 */
-    #textInput {
-      width: 30%; /* テキスト入力フォームの幅を30%に設定 */
-      margin-bottom: 10px; /* 下部に余白を追加 */
-    }
-    #pageInput {
-      width: 70px; /* ページ数入力フォームの幅を70pxに設定 */
-      margin-bottom: 10px; /* 下部に余白を追加 */
-    }
-    /* 使用方法のスタイル調整 */
-    #usageBox {
-      border: 2px solid #ddd; /* ボーダーのスタイル */
-      background-color: #f9f9f9; /* 背景色 */
-      padding: 15px; /* 内側の余白 */
-      border-radius: 10px; /* 角丸 */
-      margin-top: 10px; /* 修正：上部に余白を追加 */
-      text-align: left; /* テキストを左寄せに設定 */
-    }
-    ol {
-      margin: 0; /* マージンをリセット */
-      padding-left: 20px; /* 左側の余白 */
-    }
-    a {
-      position: absolute;
-      right: 0;
-      top: 0;
-      margin: 20px;
-    }
-    #reloadButton {
-      position: fixed;
-      right: 10px;
-      bottom: 10px;
-      width: 100px; /* 修正：ボタンの幅を指定 */
-      height: 40px; /* 修正：ボタンの高さを指定 */
-      line-height: 40px; /* 修正：テキストの垂直中央揃え */
-      background-color: #494949;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      /* 修正：透過度を設定 */
-      background-color: rgba(85, 85, 85, 0.719)
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>画像URL生成</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 50px;
+        }
+
+        /* フォームのスタイル調整 */
+        #textInput {
+            width: 30%; /* テキスト入力フォームの幅を30%に設定 */
+            margin-bottom: 10px; /* 下部に余白を追加 */
+        }
+
+        #pageInput {
+            width: 70px; /* ページ数入力フォームの幅を70pxに設定 */
+            margin-bottom: 10px; /* 下部に余白を追加 */
+        }
+
+        /* 使用方法のスタイル調整 */
+        #usageBox {
+            border: 2px solid #ddd; /* ボーダーのスタイル */
+            background-color: #f9f9f9; /* 背景色 */
+            padding: 15px; /* 内側の余白 */
+            border-radius: 10px; /* 角丸 */
+            margin-top: 10px; /* 修正：上部に余白を追加 */
+            text-align: left; /* テキストを左寄せに設定 */
+        }
+
+        ol {
+            margin: 0; /* マージンをリセット */
+            padding-left: 20px; /* 左側の余白 */
+        }
+
+        #hidden_link {
+            display: block;
+            margin-bottom: 5px;
+            text-align: right;
+        }
+
+        #urlButton {
+            width: 100px;
+            height: 40px;
+            background-color: #3498db;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        #imageUrlContainer {
+            margin-top: 10px;
+            text-align: left; /* 修正：テキストを左寄せに設定 */
+        }
+    </style>
 </head>
+
 <body>
 
-  <h1>画像表示ページ</h1>
-  <a href="https://nhentai.net/" target="_blank" style="text-decoration: none; color: transparent;">Hidden Link</a>
+    <h1>画像表示ページ</h1>
+    <a id="hidden_link" href="https://nhentai.net/" target="_blank" style="text-decoration: none; color: transparent;">Hidden Link</a>
 
-  <div id="usageBox">
-    <p><strong>使用方法:</strong></p>
-    <ol>
-      <li>対象画像サイトの1ページ目の画像を右クリックし、「画像のリンクをコピー」を押下。</li>
-      <li>「画像URL入力フォーム」にペースト。</li>
-      <li>対象画像サイトの最大ページ数を下の「指定ページ数」に入力。</li>
-      <li>「画像表示」ボタンを押下します。</li>
-      <li>「再読み込み」ボタンを押下し、すべての画像が表示されていることを確認</li>
-      <li>何もないところで右クリックし「名前を付けて保存」を選択。</li>
-      <li>ダウンロードの「画像表示ページ_files」フォルダに画像が保存されるので、中身を切り取りして別フォルダへペースト。</li>
-    </ol>
-  </div>
+    <div id="usageBox">
+        <p><strong>使用方法:</strong></p>
+        <ol>
+            <li>対象画像サイトの1ページ目の画像を右クリックし、「画像のリンクをコピー」を押下。</li>
+            <li>「画像URL入力フォーム」にペースト。</li>
+            <li>対象画像サイトの最大ページ数を下の「指定ページ数」に入力。</li>
+            <li>「URL生成」ボタンを押下します。</li>
+        </ol>
+    </div>
 
-  <label for="textInput">画像URL入力フォーム:</label>
-  <input type="text" id="textInput" placeholder="画像URLを入力">
+    <label for="textInput">画像URL入力フォーム:</label>
+    <input type="text" id="textInput" placeholder="画像URLを入力">
 
-  <label for="pageInput">指定ページ数:</label>
-  <input type="number" id="pageInput" placeholder="ページ数" max="999">
+    <label for="pageInput">指定ページ数:</label>
+    <input type="number" id="pageInput" placeholder="ページ数" max="999">
 
-  <button onclick="displayImages()">画像表示</button>
+    <button id="urlButton" onclick="generateURL()">URL生成</button>
 
-  <div id="imageContainer"></div>
-  <div id="errorContainer"></div>
+    <!-- 修正：画像URLを表示するコンテナを追加 -->
+    <div id="imageUrlContainer"></div>
 
-  <button id="reloadButton" onclick="checkLoadingStatus()">再読み込み</button>
+    <div id="errorContainer"></div>
 
-  <script>
-    function displayImages() {
-      // テキスト入力値の取得
-      var inputText = document.getElementById("textInput").value;
+    <script>
+        // 画像URLを生成する関数
+        function generateURL() {
+            // テキスト入力値の取得
+            var inputText = document.getElementById("textInput").value;
 
-      // 末尾が "1.jpg" でない場合
-      if (!inputText.endsWith("1.jpg")) {
-        document.getElementById("errorContainer").innerHTML = "画像URLを入力してください。";
-        return;
-      } else {
-        document.getElementById("errorContainer").innerHTML = "";
-      }
+            // 末尾が "1.jpg" でない場合
+            if (!inputText.endsWith("1.jpg")) {
+                document.getElementById("errorContainer").innerHTML = "画像URLを入力してください。";
+                return;
+            } else {
+                document.getElementById("errorContainer").innerHTML = "";
+            }
 
-      // 末尾の「1.jpg」を取り除く
-      var baseInputText = inputText.slice(0, -5);
+            // 末尾の「1.jpg」を取り除く
+            var baseInputText = inputText.slice(0, -5);
 
-      // 指定ページ数の取得
-      var pageCount = parseInt(document.getElementById("pageInput").value);
+            // 指定ページ数の取得
+            var pageCount = parseInt(document.getElementById("pageInput").value);
 
-      // 画像を表示するための要素取得
-      var imageContainer = document.getElementById("imageContainer");
+            // 画像URLを表示するための要素取得
+            var imageUrlContainer = document.getElementById("imageUrlContainer");
 
-      // 画像をクリア
-      imageContainer.innerHTML = "";
+            // 画像URLをクリア
+            imageUrlContainer.innerHTML = "";
 
-      // 1.jpg から指定ページ数までの画像を表示
-      for (var i = 1; i <= pageCount; i++) {
-        var imageUrl = baseInputText + i + ".jpg";
+            // 1.jpg から指定ページ数までの画像URLを表示
+            for (var i = 1; i <= pageCount; i++) {
+                var imageUrl = baseInputText + i + ".jpg";
 
-        // 画像と連番を表示する要素を組み合わせてコンテナに追加
-        var container = document.createElement("div");
-        container.className = "imageContainer";
+                // 画像URLを表示する要素を作成し、コンテナに追加
+                var linkElement = document.createElement("a");
+                linkElement.href = imageUrl;
+                linkElement.target = "_blank"; // 修正：新しいウィンドウまたはタブで開くように設定
+                linkElement.innerText = "画像" + i + ": " + imageUrl;
 
-        // 画像要素の生成
-        var imgElement = document.createElement("img");
-        imgElement.src = imageUrl;
-
-        // 連番を表示する要素の生成
-        var numberElement = document.createElement("div");
-        numberElement.className = "imageNumber";
-        numberElement.innerHTML = i;
-
-        container.appendChild(imgElement);
-        container.appendChild(numberElement);
-        
-        imageContainer.appendChild(container);
-      }
-    }
-
-    // 画像が読み込まれているか判定する関数
-    function checkLoadingStatus() {
-      // 画像要素の取得
-      var images = document.querySelectorAll("#imageContainer img");
-
-      // 未読込の画像数を初期化
-      var unloadedImageCount = 0;
-
-      // 画像の読み込み状態を確認
-      images.forEach(function(img) {
-        if (!img.complete || img.naturalWidth === 0) {
-          unloadedImageCount++;
+                imageUrlContainer.appendChild(linkElement);
+            }
         }
-      });
-
-      // 未読込の画像があるか判定
-      if (unloadedImageCount > 0) {
-        // 読み込まれていない場合は再読み込み
-        displayImages();
-      } else {
-        // 読み込み完了のポップアップを表示
-        alert("読み込み完了");
-      }
-    }
-  </script>
+    </script>
 
 </body>
+
 </html>
